# weak-symbols

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  callback_override.c  main.c  strong.c  strong_obj.c  weak.c  weak.h  weak_callback.c  weak_obj.c
targets/: BUILD.bazel
