# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.
cc_library(
    name = "hal",
    hdrs = ["weak.h"],
    srcs = ["weak.c"],
)

cc_library(
    name = "hal_cb",
    hdrs = ["weak.h"],
    srcs = ["weak_callback.c"],
)

cc_library(
    name = "override_cb",
    hdrs = ["weak.h"],
    srcs = ["callback_override.c"],
    deps = [":hal_cb"]
)

cc_library(
    name = "cmsis",
    hdrs = ["weak.h"],
    srcs = ["weak_obj.c"],
)


cc_library(
    name = "override",
    srcs = ["strong.c"],
    deps = [":hal"],
)

cc_library(
    name = "cmsis_override",
    hdrs = ["weak.h"],
    srcs = ["strong_obj.c"],
    deps = [":cmsis"]
)

cc_binary(
    name = "main",
    srcs = ["main.c"],
    deps = [
        ":override",
        ":hal",
        ":cmsis_override",
        ":cmsis",
        ":override_cb",
        ":hal_cb",
    ],
)
